syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.fullcontact.rpc";
import "google/api/annotations.proto";

message TestMessage2 {
    string f1 = 1;
}
