syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.fullcontact.rpc";
option java_outer_classname = "Test3Protos";
import "google/api/annotations.proto";

message TestMessage3 {
    string f1 = 1;
}
